Update package. Add Gradle publish script.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,18 @@
 kotlin.code.style=official
+
+GROUP=com.displee
+POM_ARTIFACT_ID=disio
+POM_NAME=DisIO
+VERSION_NAME=1.0
+POM_PACKAGING=jar
+POM_DESCRIPTION=A small standalone library that allows you to perform I/O operations.
+POM_INCEPTION_YEAR=2019
+POM_URL=https://github.com/Displee/disio
+POM_SCM_URL=https://github.com/Displee/disio
+POM_SCM_CONNECTION=scm:git:git://github.com/Displee/disio.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/Displee/disio.git
+POM_LICENCE_NAME=MIT License
+POM_LICENCE_URL=https://github.com/Displee/disio/blob/master/LICENSE
+POM_LICENCE_DIST=repo
+POM_DEVELOPER_ID=Displee
+POM_DEVELOPER_NAME=Yassin Amhagi
