--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,25 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'com.vanniktech:gradle-maven-publish-plugin:0.4.0'
+    }
+}
+
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.50'
 }
 
-group 'com.displee.io'
-version '1.0'
+apply plugin: 'com.vanniktech.maven.publish'
 
 repositories {
     mavenCentral()
 }
+
+group 'com.displee.io'
+version '1.0'
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
