--- a/build.gradle
+++ b/build.gradle
@@ -2,23 +2,20 @@ buildscript {
     repositories {
         mavenCentral()
     }
-
-    dependencies {
-        classpath 'com.vanniktech:gradle-maven-publish-plugin:0.4.0'
-    }
 }
 
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.50'
+    id 'maven'
+    id 'signing'
 }
-
-apply plugin: 'com.vanniktech.maven.publish'
 
 repositories {
     mavenCentral()
 }
 
 group 'com.displee.io'
+archivesBaseName = "disio"
 version '1.0'
 
 dependencies {
@@ -39,4 +36,66 @@ compileTestKotlin {
 
 test {
     useJUnitPlatform()
+}
+
+task javadocJar(type: Jar) {
+    classifier = 'javadoc'
+    from javadoc
+}
+
+task sourcesJar(type: Jar) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+artifacts {
+    archives javadocJar, sourcesJar
+}
+
+signing {
+    sign configurations.archives
+}
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+                authentication(userName: ossrhUsername, password: ossrhPassword)
+            }
+
+            snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+                authentication(userName: ossrhUsername, password: ossrhPassword)
+            }
+
+            pom.project {
+                name 'DisIO'
+                packaging 'jar'
+                // optionally artifactId can be defined here
+                description 'A small standalone library that allows you to perform I/O operations.'
+
+                scm {
+                    connection 'scm:git:git://github.com/Displee/disio.git'
+                    developerConnection 'scm:git:ssh://git@github.com/Displee/disio.git'
+                    url 'https://github.com/Displee/disio'
+                }
+
+                licenses {
+                    license {
+                        name 'MIT License'
+                        url 'https://github.com/Displee/disio/blob/master/LICENSE'
+                    }
+                }
+
+                developers {
+                    developer {
+                        id 'Displee'
+                        name 'Yassin Amhagi'
+                        email 'displee@hotmail.com'
+                    }
+                }
+            }
+        }
+    }
 }
